--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Module::Build::Pluggable::PPPort
 
+0.04
+
+    - fixed deps
+
 0.03
 
     - split from core dist
